  to immedietly log back in to the service specified by 'destination'.
* The logout action will now accept a 'url' parameter. If given, the logout
  page will show a message indicating that the CAS session has been terminated
  and instructing the user to click on a link to follow the given URL. If the
  'url' parameter is given, the login form will NOT be shown on the logout
  page (see above).
* When an authentication failure occurs (because the user submitted
  invalid credentials or the login ticket is missing), the server
  now returns a 401 (Unauthorized) response instead of 200.
* An encryption-enabled version of the SQL authenticator is now
  available. For more info have a look at:
  http://code.google.com/p/rubycas-server/wiki/UsingTheSQLEncryptedAuthenticator
* Better compatibility with Oracle databases. The database migration 
  no longer tries to create tables with long names when long
  table names are not supported by the underlying database connector
  (issue #15).
* The server can now be configured to automatically downcase the
  username entered by users (dowcase_username option). So if a user
  enters "JSmith", the system will convert it to "jsmith" if the
  downcase_username option is set to true.
* Fixed bug with ActiveRecord 2.0.2 where service tickets were not
  being given a type (issue #37).

=== 0.5.1 :: 2007-12-20

* Tickets generated by the server should now be a lot more secure.
  The random string generator used for generating tickets now uses
  Crypt::ISAAC. Tickets have also been extended in length; STs, PTs
  and LTs can now extend up to 32 characters, and PGTs and PGT-IOUs 
  up to 64.

=== 0.5.0 :: 2007-09-20

* Gateway requests should now be handled correctly. When the request to the
  login page is made with gateway=true as one of the parameters, the CAS
  server will immediately redirect back to the target service along with
  a service ticket if an SSO session exists for the user (or without a